--- a/redes.html
+++ b/redes.html
@@ -9,10 +9,13 @@
 		<link rel="stylesheet" href="css/links_style.css">
 	</head>
 	<body>
+		<div class="cubochess">
+			<img src="img/chesscube.svg">
+		</div>
 		<div id="miperfil">
 			<header>
 				<section class="resumen">
-					<h1> JUAN ALMAGUER </h1>
+					<h1> Juan Almaguer </h1>
 					<p> Harmony Consulting </p>
 					<div class="avatarjm">
 						<img src="img/jmchess.jpg" alt="Mi foto">
@@ -38,8 +41,17 @@
 			<main>
 				<ul class="links-sociales">
 					<li>
-						<a href="https://twitter.com/J_Almaguer" target="_blank"> <img src="img/twt.png">@j_almaguer</a>
+						<a href="https://twitter.com/J_Almaguer" target="_blank"> <img src="img/twt.png"> @j_almaguer</a>
+					</li>
+					<li>
+						<a href="https://fb.com/garciaalmaguer" target="_blank"> <img src="img/fbb.png">/garciaalmaguer </a>
 					</li>	
+					<li>
+						<a href="https://www.linkedin.com/profile/view?id=119934392&trk=spm_pic"> <img src="img/lkid.png"> Juan Almaguer</a>
+					</li>
+					<li class="imagli">
+						<a href="http://www.harmony.consulting/"> <img src="img/caballo.png"> Harmony Consulting</a>
+					</li>
 
 				</ul>
 			</main>
