--- a/links.html
+++ b/links.html
@@ -20,10 +20,10 @@
 
 				<nav>
 					<ul>
-<!-- <a> es link-->		<li class="activo">
+<!-- <a> es link-->		<li>
 							<a href="index.html">Acerca de Mí</a>
 						</li> 
-						<li>
+						<li class="activo">
 							<a href="links.html">Links</a>
 						</li>
 						<li>
