raw correcta para jalar datos kml
Dibujar kml

--- a/MetroKML.html
+++ b/MetroKML.html
@@ -23,7 +23,7 @@
     var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 
    var ctaLayer = new google.maps.KmlLayer({
-      url: 'https://raw.githubusercontent.com/Almaguer/KML_Ecoparq/master/poligonoecoparqenoperacion.kml'
+      url: 'https://raw.githubusercontent.com/Almaguer/almaguer.github.io/master/metroCompleto.kml'
     });
     ctaLayer.setMap(map);
   }
